--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "autoload": { "psr-4": {
         "Memio\\PrettyPrinter\\": "src/Memio/PrettyPrinter",
-        "Memio\\PrettyPrinter\\Config": "config",
+        "Memio\\PrettyPrinter\\Config\\": "config"
     }},
     "require": {
         "memio/model": "~1.0",
