Removed unused namespace autoloading

--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         }
     ],
     "autoload": { "psr-4": {
-        "Memio\\PrettyPrinter\\": "src/Memio/PrettyPrinter",
-        "Memio\\PrettyPrinter\\Config\\": "config"
+        "Memio\\PrettyPrinter\\": "src/Memio/PrettyPrinter"
     }},
     "require": {
         "memio/model": "~1.0",
