--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "Memio\\PrettyPrinter\\": "src/Memio/PrettyPrinter"
     }},
     "require": {
-        "memio/model": "^1.0",
+        "memio/model": "^2.0@alpha",
         "php": "^7.0"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "^1.6",
-        "phpspec/phpspec": "^2.4"
+        "friendsofphp/php-cs-fixer": "^1.6",
+        "phpspec/phpspec": "^3.0"
     }
 }
